Update 3.Q.2 Hard Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
@@ -104,7 +104,7 @@ Before taking direct action, it is essential to know your environment. A detaile
 
 ---
 
-In your manufacturing company, you are responsible for managing a large number of IoT devices. After an initial evaluation, you've discovered that many devices are operating on outdated firmware, even though they have not yet reached their end-of-life (EOL). What action should you take first?
+4. In your manufacturing company, you are responsible for managing a large number of IoT devices. After an initial evaluation, you've discovered that many devices are operating on outdated firmware, even though they have not yet reached their end-of-life (EOL). What action should you take first?
 
 A. Contact IoT device vendors for on-site support
 B. Implement Over-the-Air (OTA) update capabilities
@@ -130,6 +130,99 @@ Network segmentation improves security by limiting exposure, but it does not upd
 
 Explanation:
 The most urgent action is to remediate vulnerabilities in the firmware. OTA update capabilities enable efficient, large-scale deployment of security patches to IoT devices. After firmware is updated, additional measures like encryption and network segmentation further strengthen the security posture of IoT deployments.
+
+</details>
+
+---
+
+5. A financial services company is conducting a thorough assessment of its cryptographic protocols to align with regulatory requirements for safeguarding sensitive client data. Currently, the firm employs digital signatures to authenticate financial documents and ensure non-repudiation. To bolster the security and integrity of these digital signatures, which key management practice should the company prioritize implementing?
+
+A. Apply the same key pair for both encryption and digital signatures to reduce the complexity of key management processes
+B. Implement a rotating key strategy that regularly changes private keys to mitigate risks associated with key compromise
+C. Store private keys on cloud storage for easy accessibility by all authorized personnel
+D. Establish a robust public key infrastructure (PKI) to oversee the lifecycle of digital certificates used for signature verification
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ D. Establish a robust public key infrastructure (PKI) to oversee the lifecycle of digital certificates used for signature verification
+A PKI provides the framework for issuing, renewing, and revoking digital certificates, ensuring that public keys used for signature verification are trusted and authentic. It strengthens the integrity of digital signatures, supports regulatory compliance, and mitigates risks such as impersonation or man-in-the-middle attacks.
+
+Incorrect Answers:
+
+❌ A. Apply the same key pair for both encryption and digital signatures to reduce the complexity of key management processes:
+Using the same key pair for multiple cryptographic functions compromises security. Private key compromise would affect both data confidentiality and digital signature integrity. Cryptographic best practices mandate separate keys for encryption and signing.
+
+❌ B. Implement a rotating key strategy that regularly changes private keys to mitigate risks associated with key compromise:
+Rotating keys improves security but is only effective within a robust key management framework like PKI. Without proper management, frequent key changes can cause operational confusion and gaps.
+
+❌ C. Store private keys on cloud storage for easy accessibility by all authorized personnel:
+Storing private keys in the cloud introduces significant security risks, even with access controls. Private keys should reside in secure environments, such as Hardware Security Modules (HSMs), to prevent unauthorized access.
+
+Explanation:
+Digital signatures rely on asymmetric cryptography, where private keys are used for signing and public keys for verification. A PKI ensures proper lifecycle management of these keys and certificates, guaranteeing that digital signatures remain trustworthy, verifiable, and compliant with regulations. Other methods like key rotation or cloud storage alone cannot fully secure digital signatures without a structured PKI framework.
+
+</details>
+
+---
+
+6. A financial institution is implementing secure messaging protocols to protect sensitive transactions over its network, ensuring that the messages remain unchanged during transmission is critical. Which of the following actions would MOST effectively guarantee the integrity of these messages?
+
+A. Utilizing SSL/TLS for network communication
+B. Encrypting the messages with AES before transmission
+C. Adding HMAC with a shared secret key to each message
+D. Utilizing HTTPS for network communication
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ C. Adding HMAC with a shared secret key to each message
+HMAC (Hash-based Message Authentication Code) ensures message integrity by combining the message content with a shared secret key and applying a cryptographic hash. The recipient can recompute the HMAC using the same key and compare it to the received HMAC. A match confirms the message has not been altered during transmission and verifies the authenticity of the source.
+
+Incorrect Answers:
+
+❌ A. Utilizing SSL/TLS for network communication:
+SSL/TLS secures the channel and provides confidentiality, but it does not guarantee the integrity of individual messages themselves once outside the secure session.
+
+❌ B. Encrypting the messages with AES before transmission:
+AES encryption ensures confidentiality, preventing unauthorized reading of the message, but it does not inherently verify integrity. Without an additional mechanism like HMAC, altered messages may go undetected.
+
+❌D. Utilizing HTTPS for network communication:
+HTTPS is HTTP over SSL/TLS. Like TLS, it provides secure transport and confidentiality, but it does not independently verify message integrity at the message level.
+
+Explanation:
+To ensure integrity, a mechanism must detect changes to the message content. HMAC achieves this by producing a cryptographic signature bound to both the message and a shared secret. While encryption and secure channels protect confidentiality and privacy, HMAC is the most direct method to confirm messages are unaltered during transit.
+
+</details>
+
+---
+
+7. A bank is evaluating the integration of a third-party vendor for analytics services that will involve regular data exchanges. To minimize the risk of data leaks and ensure secure data transfer, which of the following measures should be prioritized?
+
+A. Conducting a third-party risk assessment before integration
+B. Implementing data tokenization techniques on sensitive data prior to exchange
+C. Requiring the third-party vendor to have SOC certification
+D. Establishing a symmetric-key dedicated VPN for secure data exchanges
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ B. Implementing data tokenization techniques on sensitive data prior to exchange
+Data tokenization replaces sensitive data with non-sensitive tokens, allowing analytics and operations without exposing the original data. Even if intercepted, tokens do not reveal sensitive information, minimizing the risk of data leaks and reducing compliance scope. This approach protects sensitive information directly during transit, while still enabling analytic operations.
+
+Incorrect Answers:
+
+❌ A. Conducting a third-party risk assessment before integration:
+While evaluating the vendor’s security posture is important, this does not actively protect the data being exchanged. Risk assessment identifies potential vulnerabilities but does not mitigate exposure.
+
+❌ C. Requiring the third-party vendor to have SOC certification:
+SOC certification indicates security best practices, but it cannot guarantee protection of sensitive data during transfer. It should be part of a broader security strategy, not the primary control.
+
+❌ D. Establishing a symmetric-key dedicated VPN for secure data exchanges:
+VPNs provide secure channels, but symmetric key management is challenging, and compromise of the key can expose all transmitted data. While VPNs protect in transit, they do not reduce the impact of potential interception, unlike tokenization.
+
+Explanation:
+Tokenization obscures sensitive data before it leaves your environment, providing proactive security against leaks and unauthorized access. It allows the third-party vendor to perform necessary operations without ever accessing the actual sensitive information, combining usability with strong security, which is critical for regulatory compliance and protecting client data.
 
 </details>
 
