Update 3.Q.1 Easy Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
@@ -3,8 +3,11 @@
 1. You are tasked with improving physical security measures for a SCADA (Supervisory Control and Data Acquisition) system in a critical infrastructure facility. Considering the various components involved, which of the following would present the greatest challenges in ensuring robust physical security?
 
 A. Data Acquisition Servers (DAS)
+
 B. Human Machine Interface (HMI)
+
 C. End User Backends
+
 D. Remote Terminal Unit (RTU)
 
 <details> <summary>Show answer</summary>
@@ -36,8 +39,11 @@ The Remote Terminal Unit (RTU) is the most physically exposed component in SCADA
 2. You have implemented Cross-Origin Resource Sharing (CORS) in your web applications. Probably you have been recently a victim of...
 
 A. Phishing
+
 B. Man-in-the-Middle (MITM)
+
 C. Distributed Denial-of-Service (DDoS)
+
 D. Cross-Site Request Forgery (CSRF)
 
 <details> <summary>Show answer</summary>
@@ -68,8 +74,11 @@ Cross-Origin Resource Sharing (CORS) controls how web applications handle reques
 3. A large financial services company is consolidating its data processing operations into a single, highly secure data center. Given the critical need to protect the data center’s perimeter, which security measure should be prioritized to detect potential unauthorized access attempts?
 
 A. Install mantraps at all entrance points to control access
+
 B. Build a high-security fence with barbed wire along the outer boundary
+
 C. Install high-resolution CCTV cameras around the facility's perimeter
+
 D. Deploy a PIR (Passive Infrared Sensor) based system
 
 <details> <summary>Show answer</summary>
@@ -101,8 +110,11 @@ While fences, cameras, and mantraps all contribute to a layered security approac
 4. Given the cipher transformation where (Olssv Kbkl | 7) is decoded to read as "Hello Dude," what would the decoded message be for (Emmb Ctclgle qgp | -2)?
 
 A. Good Morning sir
+
 B. Good bye friend
+
 C. Good Evening bye
+
 D. Good Evening sir
 
 <details> <summary>Show answer</summary>
@@ -137,8 +149,11 @@ Similarly, decoding (Emmb Ctclgle qgp | -2) involves moving each letter two step
 5. A tech startup is developing a new application that will handle sensitive user data, including personal identification information (PII). As part of their security practices, the development team is focused on ensuring that the application fails securely to minimize potential risks. During a review meeting, the team discusses various approaches to implement this principle effectively. What should the development team prioritize?
 
 A. Ensuring that the application defaults to a state that exposes minimal functionality in the event of a failure
+
 B. Implementing a detailed logging mechanism that captures errors without revealing sensitive information to unauthorized users
+
 C. Configuring the application to send all error messages directly to the data subject for immediate troubleshooting
+
 D. Setting the default admin password to a complicated sequence of letters, numbers, and special characters
 
 <details> <summary>Show answer</summary>
@@ -165,4 +180,37 @@ Fail-secure design ensures that when an application fails, it does so in a way t
 
 ---
 
+6. In the context of computer security, a reference monitor is defined as an abstract machine that mediates all access requests between subjects (like users or processes) and objects (such as files or resources) to protect those objects from unauthorized access. It enforces access control policies and ensures that all attempts to access an object are checked against the defined rules. Which of the following options does not represent a characteristic typically associated with a reference monitor?
+
+A. Verifiable
+
+B. Tamper-resistant
+
+C. Multilayered
+
+D. Always Invoked
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ C. Multilayered
+A reference monitor operates in a single, isolated layer of the system and is not inherently multilayered. The concept of multiple layers is more relevant to overall system architecture, not the reference monitor itself.
+
+Incorrect Answers:
+
+❌ A. Verifiable:
+This is a core characteristic. A reference monitor should be designed to be auditable and verifiable to ensure compliance with security policies and confirm its effectiveness.
+
+❌ B. Tamper-resistant:
+Correct characteristic. The reference monitor must be protected from unauthorized changes, as compromising it undermines the security of the entire system.
+
+❌ D. Always Invoked:
+Correct characteristic. The reference monitor must be invoked on every access request, ensuring no access occurs without proper authorization and enforcement of security policies.
+
+🧠 Explanation:
+The reference monitor concept ensures that all access attempts are checked consistently and securely. Its key properties—verifiable, tamper-resistant, and always invoked—guarantee reliable enforcement of security policies. Being multilayered is not a property of the reference monitor itself, which is intended to operate as a single, consistent control point within the system.
+
+</details>
+
+---
 
