Update 3.Q.1 Easy Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
@@ -214,3 +214,102 @@ The reference monitor concept ensures that all access attempts are checked consi
 
 ---
 
+7. In the business class of an airplane, each seat is equipped with an embedded Raspberry Pi used for entertainment and internet browsing. The airline wants to enhance this system by allowing all Raspberry Pis to display certain flight data from flight control units, such as altitude, speed, outside temperature, and flight radar information. Which of the following solutions would be the most effective way to implement this feature securely?
+
+A. Dedicated VLAN
+B. Data Diode
+C. Local Firewall on Each Raspberry Pi
+D. Endpoint Detection and Response (EDR) on Raspberry Pis
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ B. Data Diode
+A data diode enforces one-way data flow from flight control units to the Raspberry Pis, preventing any outgoing traffic from the Pis to critical flight systems. This ensures that flight systems remain isolated and secure, reducing the risk of cyber threats, unauthorized access, or malware propagation.
+
+Incorrect Answers:
+
+❌ A. Dedicated VLAN:
+While VLANs provide network segmentation and isolate devices, they cannot prevent outgoing traffic from the Raspberry Pis to flight control systems. Segmentation alone does not guarantee one-way data flow.
+
+❌ C. Local Firewall on Each Raspberry Pi:
+Local firewalls can control traffic, but a misconfiguration could allow unauthorized communication. They do not enforce strict one-way traffic like a data diode and managing multiple firewalls increases complexity.
+
+❌ D. Endpoint Detection and Response (EDR) on Raspberry Pis:
+EDR solutions focus on detecting and responding to malware or intrusions on individual devices but cannot prevent outgoing data flows to sensitive systems. They provide monitoring but do not enforce unidirectional traffic.
+
+Explanation:
+For critical systems, ensuring one-way data transfer is essential to prevent any compromise of flight control units. A data diode is a hardware-based solution that guarantees strict one-way flow, making it superior to VLANs, firewalls, or EDR solutions in scenarios where the integrity and security of critical systems must be preserved.
+
+</details>
+
+---
+
+8. Authenticity refers to the quality or condition of being genuine, trustworthy, and accurately representing the origin, identity, or source of something. In various contexts, authenticity implies that a person, object, document, or information is legitimate, original, and not forged or altered. Which of the following indicates that a message has been tampered or modified?
+
+A. The public key has been altered
+
+B. The private key has become known
+
+C. The message digest has been altered
+
+D. The hashing algorithm has changed
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ C. The message digest has been altered
+A message digest (hash value) uniquely represents the original content. If the digest changes, it directly indicates that the message content has been tampered with or modified, signaling a loss of integrity and authenticity.
+
+Incorrect Answers:
+
+❌ A. The public key has been altered:
+While altering a public key can affect encryption or verification, it does not directly indicate that a specific message has been tampered. It may compromise verification, but the message itself could remain unchanged.
+
+❌ B. The private key has become known:
+Compromise of the private key affects confidentiality and authentication but does not directly show that a message was modified.
+
+❌ D. The hashing algorithm has changed:
+Switching to a different hashing algorithm changes how digests are computed, but does not indicate tampering of an existing message. It only affects future digest calculations.
+
+Explanation:
+The message digest serves as a digital fingerprint of the message. Any alteration of the message content will produce a different hash, making it the most reliable indicator of tampering. Authenticity and integrity are maintained by verifying that the message digest remains consistent with the original.
+
+</details>
+
+---
+
+9. You are designing an architecture for a network that connects smart end devices to centralized services. The model you're considering needs to provide a hierarchical structure, addressing various aspects such as networking, computation, storage, and data processing. Which of the following models is hierarchical in nature and addresses networking, computation, storage, and data processing by connecting smart end devices to centralized services?
+
+A. Cloud Computing
+
+B. Edge Computing
+
+C. Fog Computing
+
+D. Smart Computing
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ C. Fog Computing
+Fog Computing is a decentralized, hierarchical computing model that extends cloud capabilities to the edge of the network. It processes data closer to the location where it is generated while maintaining a connection to centralized services, providing low latency, real-time processing, and efficient management of networking, computation, storage, and data processing.
+
+Incorrect Answers:
+
+❌ A. Cloud Computing:
+Cloud computing is centralized, with data processing occurring in distant data centers. It does not provide a hierarchical structure that connects directly to local smart devices in real time.
+
+❌ B. Edge Computing:
+Edge computing processes data near the source device but typically does not include a hierarchical connection to centralized services. Its focus is local processing rather than hierarchical integration.
+
+❌ D. Smart Computing:
+Smart computing is a general concept for systems using intelligent algorithms and automation. It does not specifically describe a hierarchical model connecting smart devices to centralized services.
+
+Explanation:
+Fog computing sits between the edge and the cloud, creating a hierarchical network model. It is ideal for IoT and smart device networks, as it reduces latency, enhances real-time processing, and connects local processing to centralized services, unlike purely cloud or edge models.
+
+</details>
+
+---
+
