Update 3.Q.2 Hard Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
@@ -246,3 +246,70 @@ Tokenization obscures sensitive data before it leaves your environment, providin
 
 ---
 
+7. You are conducting a file integrity check as part of your organization's cybersecurity measures. During the process, you need to identify which actions will not affect the hash value of a file. Which of the following actions will not change the hash value of a file? (Choose all that apply)
+
+A. Adding a blank character at the end of the file
+
+B. Backing up the file
+
+C. Copying the file
+
+D. Changing a character in the file
+
+
+<details> <summary>Show answer</summary>
+
+ Correct Answers:
+
+✅ B. Backing up the file:
+Creating a backup duplicates the file's contents exactly. Since no modification occurs, the hash remains unchanged.
+
+✅ C. Copying the file:
+Copying produces an identical duplicate of the file. The hash value depends on the contents, so an exact copy preserves the original hash.
+
+Incorrect Answers:
+
+❌ A. Adding a blank character at the end of the file:
+Even a single added character changes the file content, resulting in a different hash value.
+
+❌ D. Changing a character in the file:
+Any modification to the file content, no matter how small, produces a completely different hash value due to the sensitivity of hash functions.
+
+Explanation:
+Hash functions generate a unique fingerprint of a file's content. Any change, even a single character, will alter the hash, while operations like copying or backing up that do not modify the contents will preserve the original hash. This principle is critical for integrity checks and verifying that files have not been tampered with.
+
+</details>
+
+---
+
+8. A data center experiences a fire, triggering the suppression system to activate. As the fire is contained, the team begins assessing the damage. While the fire is controlled, the equipment has sustained some damage. What is the most likely cause of the damage to the computer equipment in this scenario?
+
+A. Smoke exposure
+B. Human error
+C. Suppression agent used
+D. Excessive heat
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅  C. Suppression agent used:
+Fire suppression systems, such as FM-200, CO₂, or other chemical agents, can extinguish fires effectively but may also damage sensitive electronic equipment. Some agents can cause corrosion or harm components if the area isn’t ventilated properly after discharge.
+
+Incorrect Answers:
+
+❌ D. Excessive heat:
+The suppression system is designed to limit heat damage by extinguishing flames. While heat could be a factor, it is less likely the primary cause if the fire was controlled quickly.
+
+❌ B. Human error:
+Human mistakes could contribute to indirect damage (like mishandling equipment), but this scenario focuses on fire suppression, making human error a secondary concern.
+
+❌ A. Smoke exposure:
+Smoke can leave residue and cause long-term effects, but the immediate, primary damage in this case is usually due to the suppression agent rather than smoke itself.
+
+Explanation:
+Fire suppression systems protect lives and infrastructure by extinguishing fires quickly. However, the chemicals or gases used can negatively affect electronics, sometimes causing corrosion or component damage. Understanding the trade-offs between fire suppression and equipment safety is critical for data center design and post-incident response.
+
+</details>
+
+---
