Update 3.Q.1 Easy Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.1 Easy Questions.md
@@ -313,3 +313,73 @@ Fog computing sits between the edge and the cloud, creating a hierarchical netwo
 
 ---
 
+10. You're a cybersecurity architect tasked with implementing robust encryption measures to safeguard sensitive data for a financial institution with strict regulatory requirements. As part of your solution design, which hardware components are eligible for integration with BitLocker to ensure the highest level of encryption key security?
+
+A. TPM
+
+B. Security Kernel
+
+C. CPU
+
+D. EPROM
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅  A. TPM (Trusted Platform Module):
+BitLocker uses TPM, a specialized hardware chip that securely stores and manages encryption keys. By storing keys in hardware rather than software, TPM provides strong protection against key theft or tampering, making it ideal for environments with high regulatory and security requirements, such as financial institutions.
+
+Incorrect Answers:
+
+❌ C. CPU:
+While the CPU executes cryptographic operations, it does not securely store encryption keys. BitLocker relies on dedicated hardware like TPM for key storage.
+
+❌ B. Security Kernel:
+The security kernel enforces access control within the operating system, but it is not a hardware-based key storage solution. BitLocker does not use the security kernel for storing keys.
+
+❌ D. EPROM:
+EPROM can retain data without power, but it is physically accessible and not secure enough for storing sensitive encryption keys. BitLocker requires a dedicated secure component like TPM.
+
+Explanation:
+For BitLocker, the TPM is the only hardware component specifically designed to securely store encryption keys. It safeguards keys against software attacks and unauthorized physical access, providing the foundation for strong encryption practices in sensitive environments like financial institutions.
+
+</details>
+
+---
+
+11. Without physical security, there can be no information security, and the assurance of confidentiality and integrity relies on the availability of resources. Which of the following is true regarding UPS devices?
+
+A. It usually converts the DC current from its batteries to usable AC current, it can protect from many types of power fluctuations.
+
+B. It usually converts the AC current from its batteries to usable DC current, it can protect from blackouts.
+
+C. It usually converts the AC current from its batteries to usable DC current, it can protect from many types of power fluctuations.
+
+D. It usually converts the DC current from its batteries to usable AC current, it can protect from all types of power fluctuations.
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ A. It usually converts the DC current from its batteries to usable AC current, it can protect from many types of power fluctuations.
+A UPS (Uninterruptible Power Supply) converts the DC from its batteries into AC usable by connected devices. It provides protection against many power issues such as surges, sags, brownouts, and short-term blackouts, allowing systems to continue operating or shut down safely.
+
+Incorrect Answers:
+
+❌ B. It usually converts the AC current from its batteries to usable DC current, it can protect from blackouts.
+Incorrect conversion: UPS batteries store DC, and output must be AC. While a UPS does protect against short-term outages, this description misstates the conversion.
+
+❌ C. It usually converts the AC current from its batteries to usable DC current, it can protect from many types of power fluctuations.
+Incorrect because batteries store DC, not AC, and UPS devices output AC to run standard equipment.
+
+❌ D. It usually converts the DC current from its batteries to usable AC current, it can protect from all types of power fluctuations.
+Incorrect because UPS devices cannot protect against all types of power issues, such as extreme lightning strikes or prolonged outages beyond their battery capacity.
+
+Explanation:
+A UPS ensures availability, converting DC from internal batteries to AC for devices and protecting against common power fluctuations. It provides time to switch to backup power or shut down safely, supporting overall information security by maintaining operational continuity.
+
+</details>
+
+---
+
