Update 3.Q.2 Hard Questions.md

--- a/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.Q.2 Hard Questions.md
@@ -317,3 +317,70 @@ Fire suppression systems protect lives and infrastructure by extinguishing fires
 
 ---
 
+9. Symmetric cryptography is a cryptographic method where the same key is used for both encryption and decryption of data. Which of the following are possible key-exchange techniques in symmetric cryptography?
+
+A. Public Key Infrastructure, Private Key Infrastructure
+
+B. Elliptic-curve, SHA-256
+
+C. Out of band, Asymmetric (Hybrid), Quantum
+
+D. In band, Asymmetric (Hybrid), Quantum
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ C. Out of band, Asymmetric (Hybrid), Quantum
+Key exchange in symmetric cryptography requires securely sharing the same secret key between parties.
+
+Out of band: Uses a separate secure channel (e.g., postal mail, phone call) to exchange the symmetric key safely.
+
+Asymmetric (Hybrid): Employs asymmetric encryption to transmit the symmetric key securely, then uses symmetric encryption for fast data transfer.
+
+Quantum: Quantum key distribution (QKD) leverages quantum mechanics to detect any eavesdropping, ensuring secure key exchange.
+
+Incorrect Answers:
+
+❌ D. In band, Asymmetric (Hybrid), Quantum
+"In band" key exchange uses the same channel as the data transmission (e.g., internet), which is less secure because the key could be intercepted.
+
+❌ A. Public Key Infrastructure, Private Key Infrastructure
+PKI and private key infrastructures are frameworks for asymmetric key management, not symmetric key exchange.
+
+❌ B. Elliptic-curve, SHA-256
+ECC is used for asymmetric encryption, not symmetric. SHA-256 is a hashing algorithm and does not handle key exchange.
+
+Explanation:
+In symmetric cryptography, the security of the communication relies entirely on safely sharing the secret key. Out-of-band channels, hybrid asymmetric methods, and quantum key distribution are practical techniques to securely exchange symmetric keys. In-band exchanges and purely asymmetric or hashing frameworks do not directly address symmetric key sharing securely.
+
+---
+
+10. You’re setting up a secure connection between a client and a server using SSL/TLS. During certificate validation, which of the following does NOT need to be verified by the client before trusting the server’s certificate?
+
+A. The digital signature of the CA is authentic
+
+B. The certificate has not expired
+
+C. The certificate has not been revoked
+
+D. The server’s public key is valid
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. The server’s public key is valid
+
+The client does not need to independently verify the server’s public key. The certificate itself contains the server’s public key, and the authenticity of that key is guaranteed by the CA’s digital signature. Trust in the key comes from trusting the CA.
+
+Incorrect Answers:
+
+❌ A. The digital signature of the CA is authentic – Must be verified to ensure the certificate was issued by a trusted CA and has not been tampered with.
+
+❌ B. The certificate has not expired – The client must check the validity period; expired certificates cannot be trusted.
+
+❌ C. The certificate has not been revoked – Must check against CRL or OCSP to ensure the certificate hasn’t been revoked due to compromise or other issues.
+
+Explanation:
+During SSL/TLS handshake, the client validates the server certificate to establish trust. Verification includes checking the CA’s digital signature, ensuring the certificate is within its valid period, and confirming it has not been revoked. The server’s public key itself does not need independent validation because it is implicitly trusted through the CA’s signature.
